# mystery-cbn

./: .dockerignore  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
benchmarks/: Dockerfile
benchmarks/comparison/: __init__.py  cli.py  evaluate.py  metrics.py  recommend.py  report.py  runner.py
benchmarks/datasets/: __init__.py  generators.py  loaders.py  metadata_schema.py  registry.py
benchmarks/framework/: __init__.py  cli.py  exporters.py  fixtures.py  perf.py  pipeline.py  quality.py  regression.py  report.py  score.py  visual.py
benchmarks/golden/: __init__.py  cli.py  compare.py  report.py  runner.py  storage.py  tolerances.py  topology_compare.py  update.py
benchmarks/golden_reports/: latest.json
benchmarks/perf/: test_analyze_perf.py  test_arcgraph_perf.py  test_components_perf.py  test_curves_perf.py  test_denoise_perf.py  test_foundation_perf.py  test_geometry_normalize_perf.py  test_labels_perf.py  test_load_perf.py  test_merge_perf.py  test_preprocess_perf.py  test_quantize_perf.py  test_svg_perf.py  test_topology_perf.py  test_validate_perf.py
benchmarks/quality/: test_curves_quality.py  test_merge_quality.py
benchmarks/smoke/: test_infra_smoke.py
docs/: ARCHITECTURE.md  BENCHMARK_SPEC.md  DATASET_STANDARDS.md  DATA_MODEL_SPEC.md  ENGINE_SPEC.md  GOLDEN_TEST_STANDARDS.md  MANUAL_TESTING_GUIDE.md  MATH_SPEC.md  QA_AUDIT_INDEX.md  RELEASE_READINESS_REPORT.md  TECHNICAL_QUALITY_COMPARISON.md  VISUAL_DEBUGGER.md
docs/adr/: 001-sprint19-orchestration-layer.md  002-sprint36-print-aware-geometry-simplification.md  003-organic-region-partition.md
docs/modules/: GAP_REPAIR_DESIGN.md  analyze.md  arcgraph.md  components.md  curves.md  geometry_normalize.md  geometry_simplification.md  labels.md  legend.md  merge.md  orchestrator.md  pdf.md  png.md  quantize.md  simplify.md  svg.md  topology.md
docs/quality/: GEOMETRY_NORMALIZE_VALIDATION_REPORT.md  QUALITY_SPEC.md
src/mysterycbn/: __init__.py
tests/contracts/: test_renderer_agreement.py
tests/golden/: test_arcgraph_golden.py  test_components_golden.py  test_gap_repair_golden.py  test_geometry_normalize_golden.py  test_load_golden.py  test_merge_golden.py  test_organic_partition_golden.py  test_pdf_golden.py  test_preprocess_golden.py  test_quantize_golden.py  test_svg_golden.py
tests/integration/: test_convert_end_to_end.py
tests/property/: test_arcgraph_properties.py  test_components_properties.py  test_geometry_normalize_properties.py  test_merge_properties.py  test_organic_partition_properties.py  test_topology_properties.py
tests/unit/: test_analyze.py  test_api.py  test_arcgraph.py  test_codes.py  test_components.py  test_config_defaults_dense.py  test_core.py  test_curves.py  test_denoise.py  test_fill_holes.py  test_foundation_color.py  test_foundation_config.py  test_foundation_geometry.py  test_foundation_infra.py  test_foundation_units.py  test_geometry_normalize.py  test_ink.py  test_kernel_pipeline.py  test_kernel_registry.py  test_labels.py  test_load.py  test_merge.py  test_model_records.py  test_model_reports.py  test_model_vector_layout.py  test_modules.py  test_pdf.py  test_preprocess.py  test_quality_metrics.py  test_quantize.py  test_reports_io.py  test_svg.py  test_topology.py  test_validate.py
tools/: __init__.py  gate_triage.py
tools/visual_debugger/: __init__.py  cli.py  html_report.py  render_artifact.py  runner.py  stages.py
(+149 files in other folders)
